--- a/src/app/components/news/news.component.html
+++ b/src/app/components/news/news.component.html
@@ -1,4 +1,4 @@
-<p *ngIf="true">我是一个新闻组件</p>
+<!-- <p *ngIf="true">我是一个新闻组件</p>
 <p>{{title}}</p>
 <div *ngFor="let item of arr;let iis=index;">
     {{item}}---索引{{iis}}
@@ -8,4 +8,6 @@
 </span>
 <button (click)="btn(123)">123</button>
 <input type="text" [(ngModel)]="binding">
-{{binding | homes}}
+{{binding | homes}} -->
+<input type="text" [(ngModel)]="base">
+<button (click)="bas()">按钮</button>
