--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,7 @@
-<app-news></app-news>
-<app-home></app-home>
+<!-- <app-news></app-news>
+<app-home></app-home> -->
+<span routerLink='NewsComponent' routerLinkActive='active'>NewsComponent</span>
+<span>-----------------</span>
+<span routerLink='HomeComponent' routerLinkActive='active'>HomeComponent</span>
+<hr/>
+<router-outlet><router-outlet>
