路由懒加载

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,17 @@
 <!-- <app-news></app-news>
 <app-home></app-home> -->
-<span routerLink='NewsComponent' [queryParams]="{id:'NewsComponent'}"  routerLinkActive='active'>NewsComponent</span>
+
+
+<!-- <span routerLink='NewsComponent' [queryParams]="{id:'NewsComponent'}"  routerLinkActive='active'>NewsComponent</span>
 <span>-----------------</span>
 <span routerLink='HomeComponent' [queryParams]="{id:'HomeComponent'}"  routerLinkActive='active'>HomeComponent</span>
 <hr/>
+<app-users></app-users>
+<app-settings></app-settings>
+<router-outlet><router-outlet> -->
+
+<p>---------------此处是分割线------------------</p>
+<span routerLink='mall'>mall</span>
+<span>-----------------</span>
+<span routerLink='product' >product</span>
 <router-outlet><router-outlet>
